# aa-grafos-proyecto-final

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  ruff.toml
.claude/: settings.json
.zed/: settings.json
configs/: default.yaml  imagenet.yaml  mnist.yaml
configs/gat/: mnist.yaml  mnist_grid.yaml  stl10.yaml  stl10_grid.yaml
configs/mnist/: full.yaml  trial-5numbers.yaml  trial-minimodel.yaml
configs/pvig/: imagenet-tiny.yaml  mnist.yaml  stl10.yaml  stl10_ti.yaml  voc.yaml  voc_nano.yaml
configs/resnet/: mnist.yaml  mnist_nano.yaml  stl10.yaml  voc.yaml
configs/vig/: imagenet-base.yaml  imagenet-small.yaml  imagenet-tiny.yaml  mnist-2numbers.yaml  mnist-5numbers.yaml  mnist-full.yaml  mnist-mini.yaml  stl10-base.yaml  stl10-small.yaml  stl10-tiny.yaml  stl10.yaml
informe/: .gitignore  informe-final.dvi  informe-final.tex  refs.bib
informe/images/: pvig_imagenet100_class_accuracy.csv
research/: plots.py  start.py
research/results/: gat-mnist.csv  gat-stl10.csv  gat-stl10_loss.csv  mnist_vig.csv  pvig-ti-stl10.csv  pvig-ti-stl10_loss.csv  resnet-mnist.csv  resnet18-stl10.csv  resnet18-stl10_loss.csv  vig-ti-imagenet.csv  vig-ti-stl10.csv  vig-ti-stl10_loss.csv
src/vision_gnn/: cli.py  lightning_module.py  vig.py
src/vision_gnn/data/: __init__.py  augmentation.py  imagenet.py  mnist.py  mnist_grid.py  mnist_superpixel.py  stl10.py  stl10_grid.py  stl10_superpixel.py  svhn_superpixel.py  viz_example_grids.py  voc.py
src/vision_gnn/model/: torch_edge.py  torch_vertex.py
src/vision_gnn/models/: seg_head.py
(+17 files in other folders)
