[project]
name = "proyecto-final-grafos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ipykernel>=7.2.0",
  "lightning[extra]>=2.6.1",
  "numpy>=2.4.3",
  "pandas>=3.0.1",
  "scikit-image>=0.26.0",
  "tensorboard>=2.18.0",
  "tensorflow>=2.21.0",
  "timm>=1.0.25",
  "torch>=2.10.0",
  "torchmetrics>=1.0.0",
  "torchvision>=0.20.0",
]

[project.scripts]
vig-train = "vision_gnn.cli:main"
vig-viz-graphs = "vision_gnn.models.vig.viz_graphs:main"

[dependency-groups]
dev = [
  "ipykernel>=7.2.0",
  "matplotlib>=3.10.8",
  "ruff>=0.15.6",
  "setuptools==81.0",
  "ty>=0.0.23",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["vision_gnn"]
